# MeanReversionTrader

./: .env.example  .gitignore  .replit  LICENSE  README.md  SETUP.md  app.py  app_fixed.py  database.py  dependencies.md  notifications.py  pyproject.toml  simple_strategy.py  strategy.py  strategy_playground.py  test_data.py  utils.py
attached_assets/: Mean_Reversion_App_Requirements.docx  Pasted--Chats-Archived-github-file-upload-strategy-21-hours-ago-are-yyou-are-the-agent-better-at-pushi-1750223421543_1750223421545.txt
